[tool.poetry]
name = "nnunet_fetalbrain"
version = "0.1.0"
description = "Snakemake workflow for fetal bold brain segmentation"
authors = ["akhanf <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
nnunet-inference-on-cpu-and-gpu = "^1.6.6"
snakebids = "^0.3.16"
snakemake = "^6.12.1"
matplotlib = "^3.5.0"
batchgenerators = "0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
